src/objects/c2g__codaCashMatchingHistory__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcashmatchinghistory</customHelpPage>
    <description>Records the activities that take place during the payment, discounting or writing-off of a payable transaction line.</description>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A cash matching history record will refer to the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Action__c</fullName>
        <description>The reason for the creation of the record.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Currency Write-off</fullName>
                </value>
                <value>
                    <fullName>Undo Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sequential number – the order of creation</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MatchedType__c</fullName>
        <label>Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when the line was matched in allocation</description>
        <label>Matching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking matched lines</description>
        <label>Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Matching Reference)</relationshipLabel>
        <relationshipName>MatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A transaction line may have many cash matching history records if its type is account; analysis and tax lines do not have a history</description>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UndoMatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking un-matched lines</description>
        <label>Undo Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Undo Matching Reference)</relationshipLabel>
        <relationshipName>UndoMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UndoReason__c</fullName>
        <description>The reason for matching being undone</description>
        <label>Undo Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matching Error</fullName>
                </value>
                <value>
                    <fullName>Remittance Advice Incorrect</fullName>
                </value>
                <value>
                    <fullName>DD Cancellation</fullName>
                </value>
                <value>
                    <fullName>DD Refer to payer</fullName>
                </value>
                <value>
                    <fullName>DD No Instruction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Cash Matching History</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Matching History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Matching Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>